# thinkbox-library

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  NOTICE.txt  README.md  THIRD-PARTY-LICENSES  build.py  conanfile.py  stdafx.cpp  stdafx.h
UnitTests/: .gitignore  CMakeLists.txt  gtest-helper.cpp  gtest-helper.h  gtest_main.cc  stdafx.cpp  stdafx.h  targetver.h
UnitTests/TestInputs/: P3D.rdx  align.aln  aln_toofew.aln  aln_toomany.aln  bunnyFloat_nolod.sprt  bunnyFloat_wlod.sprt  coordsTest1.dp  coordsTest2.dp  density_anisotropic_0.rls  density_anisotropic_1.rls  density_anisotropic_2.rls  density_metaball_0.rls  density_metaball_1.rls  density_metaball_2.rls  density_union_of_spheres_0.rls  density_union_of_spheres_1.rls  density_union_of_spheres_2.rls  density_zhu_bridson_0.rls  density_zhu_bridson_1.rls  density_zhu_bridson_2.rls  doubleFloat.e57  doubleFloat.prt  float16.csv  hdri_colors.csv  intColor.e57  intColor.prt  loadSingleScanT.e57  loadSingleScanT.prt  malicious_whitespace_after_quote.csv  massive_chunk_divisible.prt  massive_chunk_indivisible.prt  negative_eight.prt  noNormals.e57  noNormals.prt  ot_35120B4116B_1.laz  project.rsp  prt_fractal_for_krscene.prt  pts_inconsistent_channels.pts  rgb_magnitude_127.las  scale_offset_las.las  (+12 more)
UnitTests/TestOutputs/: .empty
UnitTests/test_channels/: test_channel_map.cpp  test_channel_map_weighted_sum.cpp  test_named_channel_data.cpp  test_property_map.cpp
UnitTests/test_files/: files_test_utils.hpp  test_aln.cpp  test_csv_io.cpp  test_filename_pattern.cpp  test_files_background_serializer.cpp  test_files_path_manipulation.cpp  test_files_sequence_cache.cpp  test_scoped_file_cleanup.cpp
UnitTests/test_geometry/: test_dcel.cpp  test_dcel_mesh_interface.cpp  test_delegated_const_mesh_interface.cpp  test_edge_topology.cpp  test_fractional_mesh_interface.cpp  test_generic_mesh_kdtree.cpp  test_geometry.cpp  test_geometry_changing_outputs_to_mesh_seq_saver.cpp  test_geometry_mesh.cpp  test_mesh_interface.cpp  test_mesh_interface_utils.cpp  test_mesh_measurement.cpp  test_mesh_merging.cpp  test_mixed_kdtree.cpp  test_obj_io.cpp  test_ply_io.cpp  test_polygon_utils.cpp  test_polymesh3.cpp  test_polymesh3_interface.cpp  test_stl_io.cpp  test_trimesh3.cpp  test_xmesh_sequence_saver.cpp  test_xmesh_standard_mesh_interface.cpp
UnitTests/test_graphics/: test_alpha3f.cpp  test_boundbox3f.cpp  test_camera.cpp  test_color3f.cpp  test_graphics.cpp  test_graphics_utils.cpp  test_plane3f.cpp  test_quat4f.cpp  test_ray3f.cpp  test_transform4f.cpp  test_units.cpp  test_vector3f.cpp
UnitTests/test_graphics2d/: test_boundrect2f.cpp  test_framebuffer.cpp  test_image_channel.cpp  test_mipmap.cpp  test_rasterization.cpp  test_vector2f.cpp
UnitTests/test_hashing/: test_hashing.cpp
UnitTests/test_locale/: test_locale.cpp
UnitTests/test_math/: test_math.cpp  test_math_utils.cpp
UnitTests/test_misc/: test_indexer.cpp  test_range_segmentation.cpp  test_string_functions.cpp
UnitTests/test_os/: test_environment_variables.cpp
UnitTests/test_particles/: test_e57_io.cpp  test_e57_ostream.cpp  test_las_istream.cpp  test_laz_istream.cpp  test_particles.cpp  test_particles_dart_throw.cpp  test_particles_grid_tree.cpp  test_particles_kdtree.cpp  test_particles_sph.cpp  test_ply_particle_io.cpp  test_prt2_streams.cpp  test_prt_file_header.cpp  test_ptg_io.cpp  test_pts_io.cpp  test_ptx_io.cpp  test_surface_particle_istream.cpp  test_time_interpolation_particle_istream.cpp
UnitTests/test_particles/e57_generator/: e57_generator.cpp
UnitTests/test_process/: test_child_process.cpp
UnitTests/test_projection/: test_texture_baking.cpp  test_texture_projection.cpp
UnitTests/test_prtfile/: test_prt2_io.cpp  test_prt2_with_position_offset.cpp  test_prt_io.cpp  test_prt_metadata.cpp
UnitTests/test_rendering/: test_attenuation_io.cpp
UnitTests/test_simd/: test_float_v.cpp  test_float_v_scalar.cpp  test_int_v.cpp  test_int_v_scalar.cpp
UnitTests/test_tinyxml/: test_tinyxml_utility.cpp
UnitTests/test_volumetrics/: test_implicit_surface_to_trimesh3.cpp  test_marching_cubes.cpp  test_particle_implicit_surface_policy_density.cpp  test_populate_mesh_channels.cpp  test_rle_index_spec.cpp  test_rle_level_set.cpp  test_rle_level_set_create_staggered_volume_channel.cpp  test_rle_reinitialization.cpp  test_volumetrics.cpp  test_xyzr_packet_array.cpp
UnitTests/test_win32/: test_utility.cpp
UnitTests/utilities/: e57_generator.hpp  mesh_generators.cpp  mesh_generators.hpp  scoped_temp_file.hpp
frantic/caches/: lru_cache.hpp
frantic/channels/: channel_accessor.hpp  channel_buffer.hpp  channel_buffer_iterator.hpp  channel_column_map.hpp  channel_map.hpp  channel_map_adaptor.hpp  channel_map_const_iterator.hpp  channel_map_lerp.hpp  channel_map_weighted_sum.hpp  channel_operation_compiler.hpp  channel_operation_nodes.hpp  channel_propagation_policy.hpp  named_channel_data.hpp  property_map.hpp
frantic/diagnostics/: assert_macros.hpp  profiling_manager.hpp  profiling_section.hpp  timeout_tracker.hpp
frantic/files/: aln.hpp  background_serializer.hpp  compression_stream.hpp  csv_files.hpp  file_sequence.hpp  filename_sequence.hpp  files.hpp  legacy_flood_file_io.hpp  paths.hpp  pipelined_ifstream.hpp  pipelined_ofstream.hpp  scoped_file_cleanup.hpp  sequence_cache.hpp  zlib_reader.hpp
frantic/fluids/: boundary_condition.hpp  rle_staggered_vel_accessor.hpp  rle_voxel_field.hpp  velocity_advection.hpp
frantic/geometry/: animated_trimesh3_cache.hpp  connected_components.hpp  const_shared_polymesh3_builder.hpp  dcel.hpp  dcel_construction.hpp  dcel_iterators.hpp  dcel_mesh_interface.hpp  dcel_surface_iterators.hpp  delegated_const_mesh_interface.hpp  edge_topology.hpp  fractional_mesh_interface.hpp  generic_mesh_kdtree.hpp  generic_mesh_kdtree_impl.hpp  matte_geometry_interface.hpp  mesh_conversion.hpp  mesh_file_io_factory.hpp  mesh_interface.hpp  mesh_interface_file_io.hpp  mesh_interface_utils.hpp  mesh_measurement.hpp  mesh_merging.hpp  mixed_kdtree.hpp  mixed_kdtree_detail.hpp  mixed_kdtree_trimesh3.hpp  particle_collision_detector.hpp  (+34 more)
(+399 files in other folders)
